--- a/sass/main.css
+++ b/sass/main.css
@@ -236,8 +236,8 @@ h1 {
             transform: scale(0.5);
   }
   100% {
-    -webkit-transform: rotate(1);
-            transform: rotate(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -247,8 +247,8 @@ h1 {
             transform: scale(0.5);
   }
   100% {
-    -webkit-transform: rotate(1);
-            transform: rotate(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -402,8 +402,8 @@ h1 {
             transform: scale(0.5);
   }
   100% {
-    -webkit-transform: rotate(1);
-            transform: rotate(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -567,8 +567,8 @@ nav i {
             transform: scale(0.5);
   }
   100% {
-    -webkit-transform: rotate(1);
-            transform: rotate(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -1186,7 +1186,6 @@ body {
 }
 
 .menu .dish:hover .dish__selected {
-  z-index: 10;
   width: 70px;
   height: 68px;
   border-radius: 0 15px 15px 0;
@@ -1226,18 +1225,16 @@ body {
 
 .menu .dish .dish__name .dish__name--title {
   margin: 0 0 0 .8em;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .menu .dish .dish__name .dish__name--description {
   margin: 5px 13px 0 13px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   font-size: 14.5px;
   font-weight: 400;
   opacity: 0.8;
@@ -1248,7 +1245,6 @@ body {
   opacity: .8;
   margin-right: .5em;
   margin-left: 1em;
-  z-index: 10;
 }
 
 .menu .dish .dish__selected {
