--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -21,7 +21,7 @@ $tertiary_green: #99E2D0;
         transform: scale(.5);
     }
     100%{
-        transform: rotate(1);
+        transform: scale(1);
     }
 }
 
